--- a/ansible/roles/docker-deploy/tasks/main.yaml
+++ b/ansible/roles/docker-deploy/tasks/main.yaml
@@ -5,11 +5,9 @@
     mode: '0755'
 
 - name: Deploy docker-compose.yaml
-  template:
-    src: docker-compose.yaml
+  copy:
+    copy: docker-compose.yaml
     dest: /opt/{{ project_folder }}/docker-compose.yaml
-  notify:
-    - Restart Docker Compose
 
 - name: Deploy .env file
   template:
